--- a/project-starter-code/package.json
+++ b/project-starter-code/package.json
@@ -11,9 +11,21 @@
   },
   "author": "",
   "license": "ISC",
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
+    "argon2": "^0.28.7",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
-    "jimp": "^0.16.2"
+    "jimp": "^0.22.12",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "prisma": "^4.13.0"
   }
 }
